--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,20 +1,30 @@
-<div id="home-header" class="jumbotron hero">
-  <div class="container text-center text-white">
+<div id="home-header">
+  <div class="text-center text-white">
     <h1 class="p-t-3">{{title}}</h1>
     <h3 class="p-t-2">You may download the complete the form on your own, or complete and submit the form online.</h3>
-    <div class="row p-t-2">
+    <div class="row m-t-2">
       <div class="col-md-3 col-sm-12 col-xs-12"></div>
-      <div class="col-md-3 col-sm-6 col-xs-12 p-t-3">
+      <div class="col-md-3 col-sm-6 col-xs-12 m-y-3">
           <a href="/download">
-            <button class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Download the form</button>
+            <button class="btn btn-primary"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Download the form</button>
           </a>
       </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 p-t-3">
+      <div class="col-md-3 col-sm-6 col-xs-12 m-y-3">
         <a href="/online">
-          <button class="btn btn-lg btn-primary">Upload Your Agreement</button>
+          <button class="btn btn-primary">Upload Your Agreement</button>
         </a>
       </div>
       <div class="col-md-3 col-sm-12 col-xs-12"></div>
+      <div class="col-md-12 m-y-2">
+        <h4>Steps For ILA Form Submission</h4>
+        <ul id="steps" class="m-y-2 m-x-2">
+          <li>1. Download the Internship Learning Agreement form this site.</li>
+          <li>2. Fill out all the form in its entirety with the signatures from all relevlant parties.</li>
+          <li>3. Visit the <a style="color:red;" href="http://www.qc.cuny.edu/studentlife/services/career/Pages/default.aspx" target="_blank">
+            Queens College Career Center</a> and attend at least one of their workshops before submitting the form.</li>
+          <li>4. Scan the completed form as a PDF file and submit it on here.</li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
