--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,20 +1,24 @@
 <div id="home-header">
   <div class="text-center text-white">
     <h1 class="p-t-3">{{title}}</h1>
-    <h3 class="p-t-2">You may download the complete the form on your own, or complete and submit the form online.</h3>
+    <h3 class="p-t-2">You may download and the complete the form on your own.</h3>
     <div class="row m-t-2">
       <div class="col-md-3 col-sm-12 col-xs-12"></div>
       <div class="col-md-3 col-sm-6 col-xs-12 m-y-3">
+        <!-- <a href="/download" class="btn-lg btn-primary"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Download the form</a> -->
           <a href="/download">
             <button class="btn btn-primary"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Download the form</button>
           </a>
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 m-y-3">
+        <!-- <a href="/online" class="btn-lg btn-primary">Upload Your Agreement</a> -->
         <a href="/online">
           <button class="btn btn-primary">Upload Your Agreement</button>
         </a>
       </div>
       <div class="col-md-3 col-sm-12 col-xs-12"></div>
+    </div>
+    <div class="row">
       <div class="col-md-12 m-y-2">
         <h4>Steps For ILA Form Submission</h4>
         <ul id="steps" class="m-y-2 m-x-2">
